Fixed Modal Layout and new Column spacing

--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -134,10 +134,14 @@ html {
 
 .login-modal {
     width: 350px;
+    display: block;
+    padding: 24px 24px 0px 24px;
 }
 
 .signup-modal {
     width: 375px;
+    display: block;
+    padding: 24px 24px 0px 24px;
 }
 
 .modal-col-gap{
@@ -166,6 +170,9 @@ html {
 
 .delete-modal {
     width: fit-content;
+    display: block;
+    padding: 24px 24px 0px 24px;
+
 }
 
 .col-spacer {
@@ -194,5 +201,11 @@ html {
 .table-input-class {
     padding-left: 0px !important;
     padding-right: 0px !important;
-    //font-size: 1.125rem;
+    //font-size: 1.125rem; 
+}
+
+.modal-header-text {
+    font-size: x-large;
+    font-weight: bold;
+    color: white;
 }
